plugins {
    id'application'
    id'com.github.johnrengelman.shadow' version '5.1.0'
}

def jdaVersion = '4.0.0_59'

group 'stinggy.hbot'
version '1.0-SNAPSHOT'
mainClassName = 'bot.hBotMain'

sourceCompatibility = targetCompatibility = 13

repositories {
    jcenter()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation "net.dv8tion:JDA:$jdaVersion"
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.0'
    implementation 'com.sedmelluq:lavaplayer:1.3.17'
    implementation 'org.jsoup:jsoup:1.12.1'
    implementation 'org.apache.commons:commons-text:1.7'
    implementation 'com.github.cliftonlabs:json-simple:3.1.0'
    implementation 'org.json:json:20190722'
}

jar {
    manifest {
        attributes 'Class-Path': '.'
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

compileJava.options.encoding = 'UTF-8'